<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="214dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_message"
        android:textSize="40sp" />

    <Button
        android:id="@+id/addListing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toNewListing"
        android:text="@string/add_new_listing" />

    <Button
        android:id="@+id/saleOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toSalesOverview"
        android:text="@string/sales_overview" />

    <Button
        android:id="@+id/authenticationButton"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:onClick="clickAuthenticationButton"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:onClick="toProfile"
        android:text="My Profile"
        android:visibility="invisible" />
    <Button
        android:id="@+id/conversationOverviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:onClick="toConversationOverview"
        android:text="Conversations"
        android:visibility="invisible" />
</LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/activity_main_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/bottomBarBackground"
        app:itemIconTint="@color/bottomBarContent"
        app:itemTextColor="@color/bottomBarContent"
        app:menu="@layout/bottom_bar" />
</RelativeLayout>