...
    <string name="contact_the_seller">Contact Seller</string>
    <string name="title">Listing Title</string>
    <string name="sales_overview">Sales overview</string>
    <string name="add_new_listing">Add new listing</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_required">You have to sign in to use that functionality</string>
    <string name="welcome_message">Welcome to PolyBazaar!</string>
    <string name="search">Search</string>
    <string name="latest_items"><b>Latest items</b></string>
    <string name="select_category">Select a category</string>
    <string name="select_filter">Filter</string>
    <string name="filter">Filter</string>
...
