...
                    android:numStars="1"
                    android:visibility="invisible"
                    android:focusable="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/contactSel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_large"
                android:text="@string/contact_the_seller"
                android:visibility="invisible"
                android:onClick="contactSeller"
...
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/inter_space_small">

            <Button
                android:id="@+id/makeOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_shadow_margin"
                android:layout_weight="1"
                android:text="@string/make_an_offer"
                android:visibility="invisible"
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/buyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_shadow_margin"
                android:layout_weight="1"
                android:text="@string/buy_now"
                android:visibility="invisible"
...
