...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/accept_offer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/message_small_margin"
            android:layout_marginBottom="@dimen/button_shadow_margin"
            android:textSize="@dimen/message_text_size"
            android:background="@drawable/rounded_corner_button_colored"
...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/refuse_offer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_shadow_margin"
            android:layout_marginTop="@dimen/message_small_margin"
            android:textSize="@dimen/message_text_size"
            android:background="@drawable/rounded_corner_button_colored"
...
